Updated description day 12, minor refactoring